<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_destinationMenu"
            android:title="@string/menu_destinationmenu" />
        <item
            android:id="@+id/nav_reservations"
            android:icon="@drawable/ic_menu_reservations"
            android:title="@string/menu_reservations" />
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_callUs"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_callus" />
    </group>
</menu>