<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="edu.birzeit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_destinationMenu"
        android:name="edu.birzeit.ui.destinationMenu.DestinationMenuFragment"
        android:label="@string/menu_destinationmenu"
        tools:layout="@layout/fragment_destinationmenu" />

    <fragment
        android:id="@+id/nav_reservations"
        android:name="edu.birzeit.ui.reservations.ReservationsFragment"
        android:label="@string/menu_reservations"
        tools:layout="@layout/fragment_reservations" />
    <fragment
        android:id="@+id/nav_favourites"
        android:name="edu.birzeit.ui.favorites.favoritesFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="edu.birzeit.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_callUs"
        android:name="edu.birzeit.ui.callUs.CallUsFragment"
        android:label="@string/menu_callus"
        tools:layout="@layout/fragment_call_us" />
</navigation>